--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -1,4 +1,86 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
-// @import "/assets/scss/partials/color";
-@import url('/assets/scss/partials/_color.scss');
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
+@import './partials/color';
 
+* {
+  font-family: "Poppins";
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+#header {
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  display: flex;
+  padding: 10px 20% 0 20%;
+  justify-content: space-between;
+
+  & > div {
+    width: 150px;
+  }
+
+  & > nav {
+    display: flex;
+
+    & > ul {
+      display: flex;
+      gap: 20px;
+
+      & li {
+        list-style-type: none;
+        color: white;
+        display: flex;
+        align-items: center;
+      }
+    }
+  }
+}
+
+#home {
+  height: 100vh;
+  background-image: url("/assets/images/bkg-hero-header.jpg");
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  & > div {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    color: white;
+    gap: 3rem;
+
+    & > h1 {
+        font-size: 4rem;
+        & span {
+            color: $yellow;
+        }
+    }
+
+    & > div {
+        margin-top: 40px;
+        display: flex;
+        gap: 30px;
+
+        & > a {
+            text-decoration: none;
+            color: inherit;
+            padding: 10px 50px;
+        }
+
+        & > a:nth-child(1) {
+            border: 2px solid white;
+            background-color: rgba(black, 0.3);
+        }
+
+        & > a:nth-child(2) {
+            background-color: $yellow;
+            border: 2px solid $yellow;
+        }
+    }
+  }
+}
