add about section + projects section

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -1,5 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
-@import './partials/color';
+@import "./partials/color";
+
+@mixin title-2($color, $margin-bottom) {
+  color: $color;
+  font-size: 2rem;
+  font-weight: bolder;
+  margin-bottom: $margin-bottom;
+}
 
 * {
   font-family: "Poppins";
@@ -55,32 +62,81 @@
     gap: 3rem;
 
     & > h1 {
-        font-size: 4rem;
-        & span {
-            color: $yellow;
-        }
+      font-size: 4rem;
+      & span {
+        color: $yellow;
+      }
+    }
+
+    & > p {
+      font-size: 0.9rem;
+      text-align: center;
     }
 
     & > div {
-        margin-top: 40px;
-        display: flex;
-        gap: 30px;
+      margin-top: 40px;
+      display: flex;
+      gap: 30px;
 
-        & > a {
-            text-decoration: none;
-            color: inherit;
-            padding: 10px 50px;
-        }
+      & > a {
+        text-decoration: none;
+        color: inherit;
+        padding: 10px 50px;
+        border-radius: 2px;
+      }
 
-        & > a:nth-child(1) {
-            border: 2px solid white;
-            background-color: rgba(black, 0.3);
-        }
+      & > a:nth-child(1) {
+        border: 2px solid white;
+        background-color: rgba(black, 0.3);
+      }
 
-        & > a:nth-child(2) {
-            background-color: $yellow;
-            border: 2px solid $yellow;
-        }
+      & > a:nth-child(2) {
+        background-color: $yellow;
+        border: 2px solid $yellow;
+      }
+    }
+  }
+}
+
+#about {
+  padding: 70px 20%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  & > h2 {
+    @include title-2($black, 60px);
+  }
+
+  & > p {
+    color: $text-lightgray;
+    text-align: center;
+  }
+}
+
+#projects {
+    background-color: $background-lightgray;
+
+  &>div:nth-child(1) {
+    padding: 70px 20%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    & > h2 {
+        @include title-2($black, 10px); 
+    }
+
+    & > p {
+        color: $text-lightgray;
+        text-align: center;
+    }
+  }
+
+  &>div:nth-child(2) {
+    display: flex;
+    & > img {
+        width: 25%;
     }
   }
 }
