--- a/assets/scss/partials/_color.scss
+++ b/assets/scss/partials/_color.scss
@@ -1,5 +1,7 @@
 $yellow: #ffb81c;
-$black: #575554;
+$black: #545454;
 $blood-orange: #f18b6d;
 $purple: #6a4d96;
 $bluish-black: #222f36;
+$text-lightgray: #70767d;
+$background-lightgray: #f5f5f5
