--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -44,6 +44,9 @@
       font-size: 4rem; }
       #home > div > h1 span {
         color: #ffb81c; }
+    #home > div > p {
+      font-size: 0.9rem;
+      text-align: center; }
     #home > div > div {
       margin-top: 40px;
       display: flex;
@@ -51,10 +54,45 @@
       #home > div > div > a {
         text-decoration: none;
         color: inherit;
-        padding: 10px 50px; }
+        padding: 10px 50px;
+        border-radius: 2px; }
       #home > div > div > a:nth-child(1) {
         border: 2px solid white;
         background-color: rgba(0, 0, 0, 0.3); }
       #home > div > div > a:nth-child(2) {
         background-color: #ffb81c;
         border: 2px solid #ffb81c; }
+
+#about {
+  padding: 70px 20%;
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
+  #about > h2 {
+    color: #545454;
+    font-size: 2rem;
+    font-weight: bolder;
+    margin-bottom: 60px; }
+  #about > p {
+    color: #70767d;
+    text-align: center; }
+
+#projects {
+  background-color: #f5f5f5; }
+  #projects > div:nth-child(1) {
+    padding: 70px 20%;
+    display: flex;
+    flex-direction: column;
+    align-items: center; }
+    #projects > div:nth-child(1) > h2 {
+      color: #545454;
+      font-size: 2rem;
+      font-weight: bolder;
+      margin-bottom: 10px; }
+    #projects > div:nth-child(1) > p {
+      color: #70767d;
+      text-align: center; }
+  #projects > div:nth-child(2) {
+    display: flex; }
+    #projects > div:nth-child(2) > img {
+      width: 25%; }
