--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -140,3 +140,60 @@
     }
   }
 }
+
+#testimonials {
+  background-image: url('/assets/images/bkg-testimonial.jpg');
+  padding: 70px 20%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  & > h2 {
+    @include title-2(white, 40px);
+  }
+
+  & > div {
+    & > img {
+      border-radius: 100%;
+    }
+
+    & > div {
+      width: 10px;
+      height: 10px;
+      border: 1px solid white;
+      border-radius: 100%;
+      background-color: white;
+    }
+  
+  }
+
+  & > div:last-child {
+    display: flex;
+    gap: 10px;
+  }
+
+  p {
+    font-weight: bold;
+    color: white;
+    margin-bottom: 50px;
+  }
+
+
+}
+
+#services {
+  padding: 70px 20%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  & > h2 {
+    @include title-2($black, 5px);
+  }
+
+  & > div {
+    margin-top: 50px;
+    display: flex;
+    justify-content: space-between;
+  }
+}
