--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -96,3 +96,45 @@
     display: flex; }
     #projects > div:nth-child(2) > img {
       width: 25%; }
+
+#testimonials {
+  background-image: url("/assets/images/bkg-testimonial.jpg");
+  padding: 70px 20%;
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
+  #testimonials > h2 {
+    color: white;
+    font-size: 2rem;
+    font-weight: bolder;
+    margin-bottom: 40px; }
+  #testimonials > div > img {
+    border-radius: 100%; }
+  #testimonials > div > div {
+    width: 10px;
+    height: 10px;
+    border: 1px solid white;
+    border-radius: 100%;
+    background-color: white; }
+  #testimonials > div:last-child {
+    display: flex;
+    gap: 10px; }
+  #testimonials p {
+    font-weight: bold;
+    color: white;
+    margin-bottom: 50px; }
+
+#services {
+  padding: 70px 20%;
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
+  #services > h2 {
+    color: #545454;
+    font-size: 2rem;
+    font-weight: bolder;
+    margin-bottom: 5px; }
+  #services > div {
+    margin-top: 50px;
+    display: flex;
+    justify-content: space-between; }
