--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -43,7 +43,7 @@
 
 #home {
   height: 100vh;
-  background-image: url("/assets/images/bkg-hero-header.jpg");
+  background-image: url("");
   background-size: cover;
   display: flex;
   justify-content: center;
